[package]
name = "getting-started-with-net-and-sockets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "unix-domain-server"
path = "src/unix-domain/server.rs"

[[bin]]
name = "unix-domain-client"
path = "src/unix-domain/client.rs"

[[bin]]
name = "unix-domain-http-server"
path = "src/unix-domain/http-server.rs"

[[bin]]
name = "unix-domain-http-client"
path = "src/unix-domain/http-client.rs"

[[bin]]
name = "tcp-server"
path = "src/tcp/server.rs"

[[bin]]
name = "tcp-client"
path = "src/tcp/client.rs"

[dependencies]
nix = { version = "0.29.0", features = ["net", "process", "socket"] }
